<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_large_spacing"
        android:layout_marginStart="@dimen/normal_spacing"
        android:theme="@style/HeaderTextView"
        android:textColor="@color/main_colour"
        android:text="@string/explore_meals"
        />

    <TextView
        android:id="@+id/tv_places_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/places"
        android:theme="@style/SubHeaderTextView"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/normal_spacing"
        android:textColor="@color/text_colour"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_meal_areas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/item_meal_areas"
        />

    <TextView
        android:id="@+id/tv_ingredients_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:theme="@style/SubHeaderTextView"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/normal_spacing"
        android:textColor="@color/text_colour"
        />

</LinearLayout>